# Jan 16 2012 - implemented dbsync function.
#  Added dnsclustercheck function.
#  Tweaked apacheprepostcheck to print file contents and backup the conf file before copying.
# Jan 17 2012 - Fixed mysqlup so mysql actually updates.
# Jan 18 2012 - Added hosts/dbsync file script code into this script
# Jan 19 2012 - Added additional queries for finalsync userlist verification.
#  Added rsync logging and adjusted scriptlog location
# Jan 22 2012 - Stop Ipaliases on new server if keepoldips is set.
#  Added logging of pkgacct and restorepkg instead of showing to screen.
# Jan 26 2012 - Memcache install was broken, missing a space >_< fixed.
# Jan 29 2012 - Added mysqlsymlink check
# Feb 1  2012 - added reloading for nsd nameserver
#  moved imagic ffmpeg and memcache to final checks so they are installed after EA
# Feb 2  2012 - added SSL cert check, removed IP sync migration.
# Feb 6 2012 -  Moved sslcertcheck to presync.
# Feb 16 2012 - Added gcccheck
# Feb 22 2012 - Fixed path of the dest.port.txt file when inputting new destination server ip
#  Updated single user sync to restore original authorized_keys on destination server after sync (for shared server moves)
# Feb 28 2012 - Fixed upcp from running twice
# Mar 22 2012 - Fixed postgres find.
# Mar 29 2012 - Added rubygems function.
# Apr 2 2012 - Fixed dbsync screen name
# Apr 16 2012 source ip count improvements by jmuffett
#   added dbonlysync var to check if only mysqldump menu option was ran.
# Apr 17 - removed dbonlysync var, final sync wasn't syncing dbs.
# Apr 19 - Added option to invoke --update during final rsync, rsyncupdate
# added cpbackupcheck to enable cpanel backups on the remote server.
# Apr 20 - clarified Override Ip check question text
# May 09 - removed -qt from ssh in accountcheck(), it generated a hidden ^M character keeping the check from working.
# May 10 - added option for DNR sync
Jun 12 - EA config is only copied over to new server if EA is ran.